update App.jsx to grab user from universal-cookie, add fixed height and overflow styling to navbar, remove dead code from server.js

--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  margin-top: 120px;
 }
 
 .App-logo {
@@ -81,4 +82,12 @@ div.plant-desc {
   flex-direction: column;
   justify-content: center;
   width: 50%;
+}
+
+div.ui.inverted.segment.navbar-segment {
+  top: 0;
+  position: fixed;
+  width: 100%;
+  height: 80px;
+  z-index: 1;
 }
